package com.ddd.praha.domain;

public enum EnrollmentStatus
{
  在籍中,休会中,退会済
}
