package com.ddd.praha.domain;

public enum TaskStatus {
  未着手,取組中,レビュー待ち,完了
}
